--- a/campagne.tex
+++ b/campagne.tex
@@ -110,7 +110,7 @@ Il s'agit essentiellement d'un aller-retour, en passant par \bourgpacif{}, les \
 
 \questOK{Rapporter à Morgane}{Il faut maintenant rapporter la poupée à \morgane{}}{Fait en retournant à \newcamelot{}}
 
-Et nous voici de nouveau à \newcamelot{}. Entrevue avec \morgane, qui reprend la \poupee{} et nous demande de l'aider, nous acceptons. \secret{417} Elle nous confie alors le \fauxgraal{}, en nous disans de nous renseigner auprès de la \dame{}, ou auprès des druides du \cerclelunaire{} en particulier à \amergin{}. \gain{1XP, \magic[1], «Mission au Cercle Lunaire»}.
+Et nous voici de nouveau à \newcamelot{}. Entrevue avec \morgane, qui reprend la \poupee{} et nous demande de l'aider, nous acceptons. \secret{417} Elle nous confie alors le \fauxgraal{}, en nous disans de nous renseigner auprès de la \dame{}, ou auprès des druides du \cerclelunaire{} en particulier à \amergin{}. \gain{1XP, \magic[1]\index{Gain!Magie}, «Mission au Cercle Lunaire»}.
 
 % ****************************************************************************
 % **************************************************************** Chapitre 4A 
@@ -187,19 +187,19 @@ Plus au sud-ouest, \beor{} veut absolument aller à la \foire{} \trade[,1XP]{e4v
 
 \beor{} blessé, nous traversons vers l'\hospice{} \trade{e1o1>V3}. Sur place, on se faufile dans les profondeurs interdites sans se faire repére. L'archidruide \guivrarpion{}, enfermé là, il révèle le secret des Menhirs \gain{2XP, «5° Rêves et Prophéties»} \hl{si \larve{} n'est pas l\`a}.
 
-Nouvelle traversée de l'île pour revenir au delà du \bosquet{}, vers le l'ancien \tumulus{} \trade[, 6 sur D6?]{e2t1>O1}, miné par les chasseurs de trésors. On s'enfonce dans les profondeurs pour en atteindre le c\oe{}ur, entrée en vieillacier que l'on force et qui aurait pu permettre d'apprendre le secret des Menhir \gain{\magic[1]}.
+Nouvelle traversée de l'île pour revenir au delà du \bosquet{}, vers le l'ancien \tumulus{} \trade[, 6 sur D6?]{e2t1>O1}, miné par les chasseurs de trésors. On s'enfonce dans les profondeurs pour en atteindre le c\oe{}ur, entrée en vieillacier que l'on force et qui aurait pu permettre d'apprendre le secret des Menhir \gain{\magic[1]\index{Gain!Magie}}.
 
 On arrive enfin à \loincomtat{} \trade{o1>M1}, au pied des murailles infranchissables de \tuathan{}. Une visite au hall nous apprend que, pour l'instant (Ennemis ou Alliés d'Avalon n'est pas décidé), dame \kincaid{} ne reçoit pas. Au marché, les prix se sont littéralement envolés, notamment pour Maître \dobromir{} le fabricant de jouets : \trade{o3>N1}, \trade{n2>O1}, \trade{o3>V4}, \trade[obj]{o3>}, \trade[obj]{>O1}. En quittant le marché, une vieille nous accoste et comme nous connaissons le «Secret du Vieilacier», on repère chez elle des \gain{\outilspierre} pour \rich[2]. On grimpe sur le Dolmen, pour voir l'ancienne capital de \tuathan{} envahie par le Wyrd. Les gardes parlent d'une bataille qui aurait eu lieu au sud.
 
 \quest{Bataille Magique?}{Aller dans \plainessacrees{} au Sud pour en savoir plus sur bataille.}
 
-Le lendemain, on arrive dans les plaines de \debacle{} \trade{e1n1>R1} et leurs gigantesques figures de calcaire, les réfugiés venus de l'Ouest abondent. On trouve une tombe, celle du Seigneur \yvain{} dont le sacrifice touche profondément \larve{} qui pourtant ne l'aimait guère \gain{1 Empathie, «4° leçon finale»}. Nous conseillons aux réfugiés qui demandent de l'aide de se diriger vers \newcamelot{} \gain{«2° rencontres étranges»}. \larve{} reste et rève qu'il senvole \gain{\nrj[1]}.
+Le lendemain, on arrive dans les plaines de \debacle{} \trade{e1n1>R1} et leurs gigantesques figures de calcaire, les réfugiés venus de l'Ouest abondent. On trouve une tombe, celle du Seigneur \yvain{} dont le sacrifice touche profondément \larve{} qui pourtant ne l'aimait guère \gain{1 Empathie, «4° leçon finale»}. Nous conseillons aux réfugiés qui demandent de l'aide de se diriger vers \newcamelot{} \gain{«2° rencontres étranges»}. \larve{} reste et rève qu'il senvole \gain{\nrj[1]\index{Gain!Energie}}.
 
 \beor{}, lui,  retourne à la \foire{}. Il prête une main secourable \gain{1XP, «1° main secourable»} à un guerrier en rachetant son contrat. Il se renseigne sur la première expédition et apprend qu'ils sont partis aider au siège de \boismuraille{}, y cherchant un passage vers \tuathan{} mais en sont revenu hagards, sous le choc de la mort d'\yvain{}. \gain{«6° destin expédition»}.
 
 \quest{Retrouver l'expédition}{Il faut se dépêcher de retrouver la première expédition avant qu'il ne soit trop tard.}
 
-Ensemble, nous parvenons \sousmuraille{} pour chasser \trade[, r. Verte]{e2>N1}. En l'observant, nous remarquons une silhouette qui nous fait penser qu'elle n'est pas abandonnée \gain{\nrj[1]}. Des mercenaires nous accueillent et voudraient troquer le butins qu'ils ont pillés sur des corps, nous préférons les aider à pousser leurs chariots. En échange, ils nous racontent le mariage de dame \kincaid{} et de \ultan{} le riche marchand de \boismuraille. Avec l'argent de son époux, la dame se refait une santée et vient faire le siège de \boismuraille{}, aidée par la première expédition, mais \yvain{} y change soudain d'allégeance \gain{\nour[1], «4° destin de l'expédition»}. En cherchant à traverser la muraille d'os, on trouve 5 cadavres avec, entre autre, un \talismanterni{} fait dans un étrange matériau, il n'a pas été façonné de la main de l'homme \gain{«3° rêves et prophéties», 1XP}. Enfin, nous arrivons au somment ce qui nous permet d'y pisser fièrement, tels de véritables aventuriers \gain{1XP, \terror[-1], «4 rencontres étranges»}.
+Ensemble, nous parvenons \sousmuraille{} pour chasser \trade[, r. Verte]{e2>N1}. En l'observant, nous remarquons une silhouette qui nous fait penser qu'elle n'est pas abandonnée \gain{\nrj[1]\index{Gain!Energie}}. Des mercenaires nous accueillent et voudraient troquer le butins qu'ils ont pillés sur des corps, nous préférons les aider à pousser leurs chariots. En échange, ils nous racontent le mariage de dame \kincaid{} et de \ultan{} le riche marchand de \boismuraille. Avec l'argent de son époux, la dame se refait une santée et vient faire le siège de \boismuraille{}, aidée par la première expédition, mais \yvain{} y change soudain d'allégeance \gain{\nour[1], «4° destin de l'expédition»}. En cherchant à traverser la muraille d'os, on trouve 5 cadavres avec, entre autre, un \talismanterni{} fait dans un étrange matériau, il n'a pas été façonné de la main de l'homme \gain{«3° rêves et prophéties», 1XP}. Enfin, nous arrivons au somment ce qui nous permet d'y pisser fièrement, tels de véritables aventuriers \gain{1XP, \terror[-1], «4 rencontres étranges»}.
 
 Chargés de nourriture, nous repartons vers le sud en repassant par \debacle{} pour arriver à \bordwyrd{} \trade{o2>V3} ou \trade{m2>V3}. Le crannoge central, au bout du pont, est la demeure d'\orrin{}. Il nous trouve d'abord trop impudents de nous considérer comme des Héros (\secret{283}, \rep[-2]), puis trop ambitieux de vouloire sauver Avalon (\secret{483}, \rep[-2]) mais quand on demande ses conseils (\secret{436}), il finit par accepter de nous inviter à séjourner avec lui \gain{2XP, «2° alliés Avalon»}.
 
@@ -222,7 +222,7 @@ On va alors à l'est vers \visageserein{} \trade{e3>T2M1} pour y activer le Menh
 
 \questOK{Raviver le Menhir de Visage Serein}{}{Il faut explorer en passant par l'oreille}.
 
-Dans l'oreille du visage, une corde indique que quelqu'un est passé récemment (6) et on suit sa piste (12), puis \secret{142} pour arriver dans les tréfonds du labyrinthe. Il faut du temps pour rassembler les indices \secret{114}. La salle, avec vieux piège, corps momifié et symboles sybillins sur les mur, est \emph{l'intérieur} d'un Menhir, ce qui est surprenant car elle prédate \arthur{} qui est sensé les avoir construits \gain{«6° Myustère Brûlant», «Mystère Résolu»}.
+Dans l'oreille du visage, une corde indique que quelqu'un est passé récemment (6) et on suit sa piste (12), puis \secret{142} pour arriver dans les tréfonds du labyrinthe. Il faut du temps pour rassembler les indices \secret{114}. La salle, avec vieux piège, corps momifié et symboles sybillins sur les mur, est \emph{l'intérieur} d'un Menhir, ce qui est surprenant car elle prédate \arthur{} qui est sensé les avoir construits \gain{«6° Mystère Brûlant», «Mystère Résolu»}.
 
 Un détour par \sousmuraille{} pour chasser un peu et nous repartons vers le nord pour arriver à \longcairn{} \trade[-1 obj]{e1>O1R1}. C'est une ancienne tour de guet érigée après le siège raté de \tuathan{} la cité des Précurseurs. Plutôt que de nous recueillir ou chercher des infos sur \tuathan{} ou chercher \agravain{} on payepour avoir des nouvelles de la 1ère expédition \gain{\rich[-2], «2° Destin de l'Expédition»} qui a fait une courte halte ici avant de continuer dans la vallée, au mépris des avertissements. Arrivés à 5 ils sont repartis à 4.
 
@@ -338,13 +338,13 @@ Sous un temps magnifique, nous nous attelons à la tâche. En passant d'abord pa
 % ****************************************************************************
 \section{Chapitre 11}
 
-Toujours à \longcairn{}, il nous faut choisir un avenir entre 1) aider notre village natal de \cuanacht{}, 2) aider \newcamelot{} ou 3) aider nos ``alliés'' (même si nous ne savons pas trop qui sont nos alliés). Ne sachant pas trop que faire, nous décidons d'aller voir \mordred{} à \nidcorbeaux{}. Avec le beau temps, on voyage rapidement jusqu'à \croisee{} d'où nous utilisons notre menhir portable pour révéler \nidcorbeaux{}. \beor{}, parti seul, va scruter la Pierre des Rancunes mais n'y gagne que \gain{\terror[1]} et pas grand chose qui nous permettrait d'apaiser la guerre en avalon. Il remarque néanmoins (7) qu'\aelisa{}, une célèbre marchande de \boismuraille{}, a fait appel à des mercenaires pour éliminer ses partenaires commerciaux, mercenaires qu'elle a ensuite dupé. Il y a de quoi là organiser un beau chantage \gain{ «3° Pillard», \secret{9} ``Informations confidentielles''}. \beor{} se dirige ensuite vers les huttes de pierre où il aide les réfugiés (\gain{\rep[5], \rich[-5]} et visite les bâtiments commerciaux (3) \gain{\rich[1], \nrj[-1]}.
+Toujours à \longcairn{}, il nous faut choisir un avenir entre 1) aider notre village natal de \cuanacht{}, 2) aider \newcamelot{} ou 3) aider nos ``alliés'' (même si nous ne savons pas trop qui sont nos alliés). Ne sachant pas trop que faire, nous décidons d'aller voir \mordred{} à \nidcorbeaux{}. Avec le beau temps, on voyage rapidement jusqu'à \croisee{} d'où nous utilisons notre menhir portable pour révéler \nidcorbeaux{}. \beor{}, parti seul, va scruter la Pierre des Rancunes mais n'y gagne que \gain{\terror[1]} et pas grand chose qui nous permettrait d'apaiser la guerre en avalon. Il remarque néanmoins (7) qu'\aelisa{}, une célèbre marchande de \boismuraille{}, a fait appel à des mercenaires pour éliminer ses partenaires commerciaux, mercenaires qu'elle a ensuite dupé. Il y a de quoi là organiser un beau chantage \gain{ «3° Pillard», \secret{9} ``Informations confidentielles''}. \beor{} se dirige ensuite vers les huttes de pierre où il aide les réfugiés (\gain{\rep[5]\index{Gain!Reputation}, \rich[-5]} et visite les bâtiments commerciaux (3) \gain{\rich[1]\index{Gain!Richesse}, \nrj[-1]}.
 
 On arrive à \nidcorbeaux{} sous une pluie torrentielle. Nous allons voir \mordred{} qui nous reçoit bien que nous ne soyons pas des alliées d'Avalon (17). Pour ancrer son pouvoir dans cette partie de l'île, il souhaiterait les grimoires de sa mère \morgane{}, ce qui laisserait Camelot sans défense. \gain{«5° Eclaireur»}.
 
 \quest{Récupérer les grimoires à \newcamelot{} ou rejoignez une des autres puissances en Avalon.}
 
-Nous passons ensuite au marché (10) pour faire le plein de provision \gain{\rich[-1], \nour[1]}.
+Nous passons ensuite au marché (10) pour faire le plein de provision \gain{\rich[-1], \nour[1]\index{Gain!Nourriture}}.
 
 Bon ! Allons voir comment se porte \cuanacht{}...
 
@@ -359,7 +359,7 @@ Au moment de quitter \cuanachtdevaste{}, nous faisons une rencontre inattendue e
 
 \quest{Destin final d'Arthur}{Que va faire \arthur{}?}
 
-Pour l'heure, nous nous dirigeons vers le sud et les \lames{}. Cette fois, nous ggrimpons tout en haut des gigantesques épées, pour y découvrir que des feuilles d'or couvrent en partie le pommeau \gain{1XP, \rich[2], «1° trésors cachés»}. Ensuite, \beor{} fabrique un bouclier en osier. Avec la nuit, nous rêvons de la première bataille, où \arthur{} fit mettre un genoux à terre au géants \gain{\terror[-1]}.
+Pour l'heure, nous nous dirigeons vers le sud et les \lames{}. Cette fois, nous ggrimpons tout en haut des gigantesques épées, pour y découvrir que des feuilles d'or couvrent en partie le pommeau \gain{1XP, \rich[2], «1° trésors cachés»}. Ensuite, \beor{} fabrique un bouclier en osier. Avec la nuit, nous rêvons de la première bataille, où \arthur{} fit mettre un genoux à terre au géants \gain{\terror[-1]\index{Gain!Terreur}}.
 
 Le temps se maintient au beau, on pousse jusqu'à \larvebois{}, un endroit peu agréable qui grouille de larves blanches. Nous cherchons à atteindre le c\oe{}ur de la forêt, pour y découvrir un précurseur bien diminué. Il nous demande d'aller quérir son anneaux, que l'on décide de garder en éliminant la créature. Rêver, ou cauchemarder ici n'est pas de tout repos...
 
@@ -367,7 +367,20 @@ Le temps est magnifique, on remonte vers le \bosquet{} puis \blanc{} sous une lu
 
 Au centre du lac d'où l'eau s'est retirée, une épine de wyrdroche abrite une grotte labyrinthique. On y trouve la \dame{}, fatiguée et alitée. Elle pense qu'il existe peut-être un endroit sûr le long de la côte, du côté des bateaux (?) mais, plus sûrement, vers le \visageserein{}, ce qui demandera de briser les sceaux \gain{«6° rêves et prophéties»}.
 
-\quest{Visage Serein}{Aller au \visageserein{} et le transformer en Refuge.}
+\questOK{Visage Serein}{Aller au \visageserein{} et le transformer en Refuge.}{Brise les sceaux dans la salle aux étoiles}
+
+Après nous être débarassé d'un autre gardien, nous prenons donc la route du \visageserein{} sous un beau temps. Une fois sur place, nous pénêtrons dans le visage par son oreille. Suivre nos anciennes traces ne révèle rien de nouveau, alors on se glisse dans une fissure (3) pour arriver à une grande salle vide où brillent les étoiles (7), des milliers de pierres précieuses enchassées dans la voute. Il est possible d'y entrer en transe, mais nous préférrons trouver les sceaux indiqués par la \dame{} (13). Plusieurs jours sur place, à se reposer sous le dôme \gain{\magic[2]]\index{Gain!Magie}, \terror[-2]\index{Gain!Terreur}} seront nécessaires avant de pouvoir effectivement briser les sceaux \gain{«5° Dernier Refuge»}.
+
+Nous retournons alors au \bosquet{} pour chasser, puis poussons jusqu'à \blanc{}. Il nous faut affronter un chevalier errant avant d'arriver à la \flotte{}. Nous y fouillons les épaves (7) pour trouver de l'or \gain{\rich[2], «5° Trésors cachés»}. Dans le fortin (2) abandonné, des traces de passages récents et la herse a été entaillée à plusieurs endroits. On se résoud alors à nager jusuq'à l'arbre (5); grâce à Excalibur \secret{78}, \ailei{} peut briser le dôme invisible qui protège la flotte \gain{2XP, «3° Dernier Refuge»}.
+
+Nous avons donc au moins 2 refuges \secret{611}, il est temps de réfléchir à la suite...
+
+% ****************************************************************************
+% **************************************************************** Chapitre 14 
+% ****************************************************************************
+\section{Chapitre 14}
+
+
 
 
 
