Ch14 cuanart flotte

--- a/campagne.tex
+++ b/campagne.tex
@@ -380,6 +380,13 @@ Nous avons donc au moins 2 refuges \secret{611}, il est temps de réfléchir à 
 % ****************************************************************************
 \section{Chapitre 14}
 
+Il est clair qu'il faut mener des communautés aux refuges que nous avons trouvés ou fabriqués.
+
+\questOK{Amener une communauté en sécurité}{Si nous réussisson, nous pourrons obtenir le \secret{622}}{De \cuanachtdevaste{} à \flotte{}}.
+
+On retourne donc vers \blanc{}, en croisant un noble offensé. \beor{} reste ``diplomate'' avec les habitants et ne casse que quelques os... Par beau-temps, on pousse jusqu'à \cuanachtdevaste{} en passant par le \bosquet{}. Là, nous nous proposons de guider la population vers un endroit sûr (11) \gain{«1° Abandonnes», «7° Confrontation Finale»}, les colons remplis d'espoir \secret{33} nous suivent.
+
+Nous les faisons passer par le \premierfort{} sous un temps magnifique avant d'arriver à la \flotte{}. Les survivants prennent place à bord (3) de deux douzaines de navires \gain{«3° Vestiges», \rep[3], +3XP}. Mais, comme nous avons encore des choses à faire (nous voulons savoir ce qu'il est advenu d'\arthur{}), nous ne partons pas avec eux. Nos aventures ne sont pas finies.
 
 
 
