ADD fin de l'histoire

--- a/campagne.tex
+++ b/campagne.tex
@@ -389,8 +389,15 @@ On retourne donc vers \blanc{}, en croisant un noble offensé. \beor{} reste ``d
 Nous les faisons passer par le \premierfort{} sous un temps magnifique avant d'arriver à la \flotte{}. Les survivants prennent place à bord (3) de deux douzaines de navires \gain{«3° Vestiges», \rep[3], +3XP}. Mais, comme nous avons encore des choses à faire (nous voulons savoir ce qu'il est advenu d'\arthur{}), nous ne partons pas avec eux. Nos aventures ne sont pas finies.
 
 
+Nous repartons donc en directionde \camelot{} en passant par les \marchestitan{}. Au sein des ruines fumantes du temple de la Toute Mère, on trouve des corps dénudés de prêtresses mais aussi, cloué sur une croix en bois, un Chevalier de la Table Ronde qu'il est impossible d'identifier \gain{«4° Chute Chevalerie», \terror[2]}. A \bourgpacif{}, les traces de la rébellion matée par les Chevaliers sont patents, lens pendus abondent \gain{«4° Aider les Chevaliers», \terror[1], +1XP}.
 
+Enfin, grâce à notre menhir portable, nous arrivons à \camelot{}, e, état de semi-siège. Nous arrivons à rentrer en rappelant aux gardes que nous ``travaillons pour \morgane{}''. Une fois à l'intérieur (2), nous allons voir \lancelot{} (11) qui semble moins troublé que la fois précédente. Il aimerait nous envoyer régler un problème de convois attaqués près de \cuanacht{}, mais il n'a pas l'air de savoir que nous avons guidé la population ailleurs...
 
+Ensuite nous trouvons \morgane{} qui nous accueille avec 20 arbaletriers pointant leurs armes sur nous. Elle n'a pas digéré le fait que nous ayons préféré aider la \dame{}. Mais nous lui rappelons que nous l'avons aussi aidée, par le passé. Elle consent à oublier sa colère et nous propose alors de faire de \camelot{} un refuge, au détriment d'autres lieux sauvables, comme \cuanacht{} par exemple. Avant tout, nous lui demandons d'honorer sa parole et de nous faire part du secret qu'elle nous a promis : elle nous dit ce que nous soupçonions déjà, à savoir que nous étions les réincarnation de compagnons d'Arthur qui ont mis le pied sur l'ile il y a 600 ans. Puis nous acceptons de nous diriger vers \cuanacht{} où nous prendrons une décision.
+
+En fait, nous partons pour \bourgpacif{} où nous proposons d'amener un deuxième groupe de réfugié dans un autre havre de paix. Tout un périble nous conduit enfin au \visageserein{}. Le groupe s'installe dans l'immense tête, un endroit étrange mais auquel on peut s'habituer (10).
+
+Ne voulant pas nous installer pour l'instant, nous repartons. Une première étape à \nidcorbeaux{} qui ne nous apprend rien de nouveau. Bien décidés à explorer toute l'île, nous repassons par les \tombesordre{}, ce qui nous permet d'atteindre \pointlointain{}. Un lieu étrange, loin de tout, qui fut sans doute habité par des créature non-humaines. \secret{715}, \secret{700}. Nous avons sauvé ceux de \cuanacht{} \secret{710}, \secret{755} la \dame{} se bat pour les humains sur son territoire, \secret{760} mais nous parvenons à survivre dans notre nouveau foyern, bien qu'ayant été aidé par la Toute Mère \secret{701}.
 
 
 
