--- a/common.tex
+++ b/common.tex
@@ -223,6 +223,7 @@
 \def\noirbourbe{\lieu{Noirebourbe}[140]}
 \def\ondechute{\lieu{Ondechute}[156]}
 \def\plainessacrees{\lieu{Plaines Sacrées}[???][Plaines Sacrees]}
+\def\pointlointain{\lieu{Point-Lointain}[161]}
 \def\resolutionorrin{\lieu{Résolution d'Orrin}[180][Resolution d\'Orrin]}
 \def\sousmuraille{\lieu{Sous la Muraille}[111]}
 \def\premierfort{\lieu{Premier Fort}[117]}
